# todo-backend

./: .env  Dockerfile  compose.yaml  pyproject.toml
api-testing/todo-backend/: bruno.json  create_todo.bru  delete_all_todos.bru  delete_todo.bru  get_all_todos.bru  update_todo.bru
api-testing/todo-backend/environments/: local.bru
migrations/versions/: 34821db86943_.py  5c5cdb4858d5_.py
src/: app.py  routes.py
src/config/: __init__.py
src/contracts/: todo_dto.py
src/controllers/: todo_controller.py
src/models/: __init__.py  todo_model.py
src/repositories/: __init__.py  todo_repository.py
src/schemas/: __init__.py  todo_schema.py
src/services/: todo_service.py
